# TelemetryBridge

./: CMakeLists.txt  links  main.cpp  serial_test
include/: mavlink_converter.h  msp_parser.h  serial_interface.h  telemetry_bridge.h  test_file.h  upd_interface.h
src/: main.cpp  mavlink_converter.cpp  msp_parser.cpp  serial_interface.cpp  telemetry_bridge.cpp  test_file.cpp
